syntax = "proto3";

package poet;

service HelloWorldService {
  rpc SayHello (HelloWorldRequest) returns (HelloWorldResponse) {}
}

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string hello = 1;
}